--- a/package.json
+++ b/package.json
@@ -4,7 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "c": "git-cz",
+    "version": "standard-version"
+  },
+  "standard-version": {
+    "changelogHeader": "# Changelog\n\n所有项目的变更记录会记录在如下文件.\n",
+    "dryRun": true
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.{ts}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -21,6 +44,21 @@
   },
   "homepage": "https://github.com/morrain/design_pattern#readme",
   "devDependencies": {
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "commitizen": "^4.1.2",
+    "conventional-changelog": "^3.1.23",
+    "eslint": "^7.7.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.11",
+    "standard-version": "^9.0.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   }
