--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "commitizen": "^4.1.2",
-    "conventional-changelog": "^3.1.23",
+    "cz-conventional-changelog": "^3.2.0",
     "eslint": "^7.7.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.0",
